--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,44 +3,44 @@ message(STATUS "start running cmake...")
 cmake_minimum_required(VERSION 3.10)
 project(book)
 
-#set(CMAKE_CXX_STANDARD 20)
+#set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++17")
-
-add_subdirectory(libs/googletest)
-include_directories(libs/googletest/googletest/include)
+#add_subdirectory(libs/googletest)
+#include_directories(libs/googletest/googletest/include)
 
 add_subdirectory(libs/fmt)
 include_directories(libs/fmt/include)
 
 set(SOURCE_FILES
-        workspace/internal/print.h
-        workspace/internal/print_impl.h
-        workspace/internal/time.h
-        workspace/internal/time.cpp
-        workspace/study/classes/person.h
-        workspace/containers/list.h
-        workspace/study/classes/character_actions.h
-        workspace/study/classes/character_actions.cpp
-        workspace/tests/test_characters.h
-        workspace/tests/test_characters.cpp
-        workspace/study/arrays.cpp
-        workspace/study/strings.cpp)
+        workspace/study/strings.cpp
+        )
+#        workspace/internal/print.h
+#        workspace/internal/print_impl.h
+#        workspace/internal/time.h
+#        workspace/internal/time.cpp
+#        workspace/study/classes/person.h
+#        workspace/containers/list.h
+#        workspace/study/classes/character_actions.h
+#        workspace/study/classes/character_actions.cpp
+#        workspace/tests/test_characters.h
+#        workspace/tests/test_characters.cpp
+#        workspace/study/arrays-study.cpp
 
 add_executable(MAIN
         ${SOURCE_FILES}
         workspace/main.cpp)
 target_link_libraries(MAIN PRIVATE fmt-header-only)
 
-add_executable(gtest_clock
-        ${SOURCE_FILES}
-        workspace/gtests/gtest_clock.cpp)
-target_link_libraries(gtest_clock gtest gtest_main)
+#add_executable(gtest_clock
+#        ${SOURCE_FILES}
+#        workspace/gtests/gtest_clock.cpp)
+#target_link_libraries(gtest_clock gtest gtest_main)
 
-add_executable(gtest_array
-        ${SOURCE_FILES}
-        workspace/gtests/gtest_array.cpp)
-target_link_libraries(gtest_array gtest gtest_main)
+#add_executable(gtest_array
+#        ${SOURCE_FILES}
+#        workspace/gtests/gtest_array.cpp)
+#target_link_libraries(gtest_array gtest gtest_main)
 
 #find_package(Boost COMPONENTS #[[system filesystem]] program_options REQUIRED)
 
